--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-ga": "3.3.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "7.31.10"
   }
 }
